--- a/vpc.yaml
+++ b/vpc.yaml
@@ -138,6 +138,9 @@ Resources:
           DeviceIndex: 0
           DeleteOnTermination: true
           SubnetId: !Ref PublicSubnet1A
+      Tags:
+        - Key: "Name"
+          Value: "BastianHost"
 
   #security group for bastian host
   MySecurityGroup:
@@ -151,6 +154,10 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 18.202.216.48/29
       SecurityGroupEgress:
         - IpProtocol: tcp
           FromPort: 80
