--- a/vpc.yaml
+++ b/vpc.yaml
@@ -138,6 +138,8 @@ Resources:
           DeviceIndex: 0
           DeleteOnTermination: true
           SubnetId: !Ref PublicSubnet1A
+          GroupSet:
+            - !Ref MySecurityGroup
       Tags:
         - Key: "Name"
           Value: "BastianHost"
@@ -153,15 +155,6 @@ Resources:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: 18.202.216.48/29
-      SecurityGroupEgress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
           CidrIp: 0.0.0.0/0
       Tags:
         - Key: "Name"
