This is the updated version that allows website hosting

--- a/s3-static.yaml
+++ b/s3-static.yaml
@@ -1,10 +1,25 @@
-AWSTemplateFormatVersion: "2010-09-09"
+AWSTemplateFormatVersion: '2010-09-09'
 Description: Static website hosting bucket
 Resources:
   MyBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: standard-wb-27
+      BucketName: standard-wb-30
       WebsiteConfiguration:
         IndexDocument: index.html
-        ErrorDocument: error.html
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: false
+        IgnorePublicAcls: false
+        BlockPublicPolicy: false
+        RestrictPublicBuckets: false
+  MyBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref MyBucket
+      PolicyDocument:
+        Statement:
+          - Sid: PublicReadGetObject
+            Effect: Allow
+            Principal: '*'
+            Action: s3:GetObject
+            Resource: !Sub arn:aws:s3:::${MyBucket}/*
