--- a/Portfolio_projects/TravelEase/package.json
+++ b/Portfolio_projects/TravelEase/package.json
@@ -13,18 +13,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@aws-amplify/backend": "^1.16.1",
-    "@aws-amplify/backend-cli": "^1.8.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^24.3.3",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
-    "aws-cdk-lib": "^2.214.0",
-    "constructs": "^10.4.2",
-    "esbuild": "^0.25.9",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
     "jsdom": "^25.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -37,6 +32,6 @@
     "@aws-sdk/client-dynamodb": "^3.888.0",
     "@aws-sdk/client-ses": "^3.888.0",
     "@aws-sdk/lib-dynamodb": "^3.888.0",
-    "aws-amplify": "^6.15.6"
+    "react-hook-form": "^7.66.0"
   }
 }
